[package]
name = "rawviewer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rawviewer"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.31", features = ["default"] }
egui = "0.31"
memmap2 = "0.9"
rayon = "1.10"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
bytemuck = "1.18"
sysinfo = "0.35"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
flate2 = "1.1.9"
toml = "1.1.2"

[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 1  # faster debug builds, still debuggable
